<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/pure_black">

    <LinearLayout
        android:id="@+id/player_status_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/player_status_label_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/pure_white"
                android:layout_margin="@dimen/player_status_label_margin"
                android:text="@string/player_status_label_title" />

            <TextView
                android:id="@+id/player_status_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/player_status_label_margin"
                android:textColor="@color/pure_white"
                android:text="@string/player_status_label" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/player_buffer_status_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/pure_white"
                android:layout_margin="@dimen/player_status_label_margin"
                android:text="@string/player_buffer_status_title" />

            <TextView
                android:id="@+id/player_buffer_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/player_status_label_margin"
                android:textColor="@color/pure_white"
                android:text="@string/player_buffer_status" />

        </LinearLayout>

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player_status_container">

        <fi.finwe.orion360.sdk.pro.view.OrionView
            android:id="@+id/orion_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,2:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <RelativeLayout
            android:id="@+id/control_panel_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,2:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ProgressBar
            android:id="@+id/buffering_indicator"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone" />

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>
